note about configuring

--- a/HelloDynamoDB.html
+++ b/HelloDynamoDB.html
@@ -18,9 +18,10 @@ While it's true, Amazon provides detailed documentation for DynamoDB, unfortunat
 AWS configure
 
 Note: this is a simple experiement for demonstration
-purposes only. Do not include the secret key in 
-an actual production environment, because, then, it wont
-be secret anymore...
+purposes only. Replace the keys below with your own.
+
+Do not include the secret key in an actual production
+environment, because, then, it wont be secret anymore...
 
 -----------------------------------------------------------------
 */
